--- a/reports/BCStats_Proposal.Rmd
+++ b/reports/BCStats_Proposal.Rmd
@@ -7,6 +7,7 @@ output:
   ioslides_presentation:
     widescreen: true
     smaller: true
+    logo: figures/BCStats_logo.png
 ---
 
 ```{r setup, include=FALSE}
@@ -48,54 +49,94 @@ import altair as alt
 
 ## Introduction | Open-ended Questions
 
-Question 1
+**Question 1**  
 
 ### <b> <span style="color:#005c99">
 What one thing would you like your organization to focus on to improve your work environment? </span></b>
 
-
-
-<br>
-
-Question 2
-
-### <b> <span style="color:#005c99">
-Have you seen any improvements in your work environment and if so, what are the improvements?
-</span> </b>
-
-
-## Objectives 
-
-**Overarching goal:  
-Use automated multi-label theme classification of comments to themes and subthemes.**
-
- **Question 1**
-
-- <span style="color:#005c99">Improve accuracy</span> for predicting label(s) for main <span style="color:#005c99">themes</span> respective of previous capstone project results.
-- <span style="color:#005c99">Build a model</span> for predicting label(s) for <span style="color:#005c99">sub-themes</span>.
-- Scalability: Identify <span style="color:#005c99">trends across ministries</span> and over the four specified years.
+Example: *"Better health and social benefits should be provided."*
 
 <br>
 
 **Question 2**
 
+### <b> <span style="color:#005c99">
+Have you seen any improvements in your work environment and if so, what are the improvements?
+</span> </b>
+
+Example: *"Now we have more efficient vending machines."*
+
+<br>
+<br>
+<font size="3"> *Note: these are fake comments as examples of the data. </font>
+
+## Objectives 
+
+**Overarching goal:  
+Use automated multi-label theme classification of comments to themes and sub-themes.**
+
+**Question 1**  
+<font size="3">What one thing would you like your organization to focus on to improve your work environment?</font></span></b>
+
+- <span style="color:#005c99">Build a model</span> for predicting label(s) for main <span style="color:#005c99">themes</span>.
+- <span style="color:#005c99">Build a model</span> for predicting label(s) for <span style="color:#005c99">sub-themes</span>.
+- Scalability: Identify <span style="color:#005c99">trends across ministries</span> and over the four specified years.
+
+<br>
+
+**Question 2**  
+<font size="3">Have you seen any improvements in your work environment and if so, what are the improvements?</font></span></b>  
+
 - <span style="color:#005c99">Identify labels</span> for theme classification and compare with existing labels.
 - Create <span style="color:#005c99">visualizations for executives</span> to explore the results.
 
+## Existing Solution for Question 1 | Last year's Capstone
+Objective:
+- To build a model for predicting label(s) for themes
+
+<img src="figures/results_capstone_2019.png" width="900"/>
+
+<font size="3">*Source: [BC Stats Capstone 2019-Final Report, by A. Quinton, A. Pearson, F. Nie](https://github.com/aaronquinton/mds-capstone-bcstats/blob/master/reports/BCStats_Final_Report.pdf)*</font>
+
+We aim to improve accuracy for predicting label(s) for main themes respective of previous capstone project results.
+
+
+## Getting Familiar with the Data
+
+- Separate Data for each question, and each year.
+- Comments with sensitive information.
+- Files in XLSX -Excel format-.
+<br>
+<br>
+
+**Question 1**  
+<font size="3">What one thing would you like your organization to focus on to improve your work environment?</font>
+
+- <span style="color:#005c99">**Labeled data from 2013, 2018, 2020**</span>, added to around 32,000 respondents.
+<br>
+<br>
+
+**Question 2**  
+<font size="3">Have you seen any improvements in your work environment and if so, what are the improvements?</font></span></b>  
+
+- <span style="color:#005c99">**Labeled data from 2018**</span>, which add around 6,000 respondents.
+<br>
+- <span style="color:#005c99">**Unlabeled data from 2015 and 2020**</span>, that respresent 9,000 additional comments.
+
 ## EDA | Question 1
 
-**Data**<br>
-Labeled data from 2013, 2018, 2020. Added to around 32,000 respondents.
-
-<br>
 **Dataset format**<br>
 Responses for this question are captured and labeled (theme and sub-theme) by hand:
+
+<br>
 
 |Comments*|CPD|CB|EWC|...|CB_Improve_benefits|CB_Increase_salary|
 |:----|:---:|:---:|:---:|:---:|:---:|:---:|
 |Better health and social benefits should be provided|0|1|0|...|1|0|
 
 <br>
+<br>
+
 **Theme**: CB = Compensation and Benefits
 <br>
 
@@ -108,6 +149,7 @@ Responses for this question are captured and labeled (theme and sub-theme) by ha
 ## EDA | Question 1
 Labels: <span style="color:#005c99">13 themes</span> and <span style="color:#005c99">63 sub-themes</span>.
 
+<center>
 ```{python}
 #reading in the train data for themes
 data_train_q1 = pd.read_csv('../data/y_train.csv')
@@ -122,19 +164,20 @@ theme_table.rename(columns={'index':'theme_codes', 0:'count'}, inplace=True)
 
 theme_table_final = pd.merge(theme_table, code_names)
 
-theme_chart_q1 = alt.Chart(theme_table_final, width=500, height=200, title='Number of comments for themes in training data').mark_bar().encode(
-    x=alt.X('theme_names:N', sort='-y', title = 'themes'),
-    y=alt.Y('count:Q')
+theme_chart_q1 = alt.Chart(theme_table_final, width=600, height=300, title='Number of comments for themes in training data').mark_bar().encode(
+    y=alt.Y('theme_names:N', sort='-x', title = 'themes'),
+    x=alt.X('count:Q'),
+    opacity=alt.Opacity('count:Q', legend=None),
+    tooltip='count:Q'
 ).configure_axisX(
-    labelAngle = -45
+    #labelAngle = -45
 ).to_json()
 ```
 
 ```{r}
 as_vegaspec(py$theme_chart_q1)
 ```
-
-<br>
+</center>
 Label cardinality for themes: **~1.4**
 
 ## EDA | Question 1
@@ -148,16 +191,19 @@ subtheme_count.rename(columns={'index':'subtheme_code', 0:'count'}, inplace=True
 subtheme_count['theme_code'] = subtheme_count['subtheme_code'].str.split('.').str[0]
 subtheme_count['theme_code'] = pd.to_numeric(subtheme_count['theme_code'])
 ```
-
+<center>
 ```{python}
 final_train_subtheme_table = pd.merge(subtheme_count, codes)
-facet_chart = alt.Chart(final_train_subtheme_table, title = 'Comments per sub-themes in training dataset', height=75, width=100).mark_bar().encode(
+facet_chart = alt.Chart(final_train_subtheme_table, title = 'Comments per sub-themes in training dataset', height=50, width=125).mark_bar().encode(
     x=alt.X('subtheme_code:N', 
-            title=None,
+            title="sub-themes",
             sort=alt.EncodingSortField(field='count')),
-    y=alt.Y('count:Q')
+    y=alt.Y('count:Q'),
+    opacity=alt.Opacity('count:Q', legend=None),
+    tooltip='count:Q'
 ).facet(
     facet = 'theme_name:O',
+    title = "Comments per sub-themes in training dataset",
     columns = 4
 ).resolve_scale(
     x='independent'
@@ -168,17 +214,13 @@ facet_chart = alt.Chart(final_train_subtheme_table, title = 'Comments per sub-th
 library(vegawidget)
 as_vegaspec(py$facet_chart)
 ```
-
+</center>
 Label cardinality for sub-themes: **~1.6**
 
 ## EDA | Question 2
+Labels for 2018: <span style="color:#005c99">6 themes</span> and <span style="color:#005c99">16 sub-themes</span>
 
-**Data**
-
-- Labeled data from 2018 (around 6,000 respondents).  
-- Unlabeled data from 2015 and 2020 (9,000 additional comments).
-
-<div class= "columns-2">
+<center>
 ```{python}
 # reading in training data  
 y_train_q2 = pd.read_csv('../data/y_train_q2.csv')
@@ -187,61 +229,64 @@ y_train_q2 = pd.read_csv('../data/y_train_q2.csv')
 q2_class_df = pd.DataFrame(np.sum(y_train_q2)).reset_index()
 q2_class_df = q2_class_df.rename(columns={'index':'themes', 0:'count'})
 
-theme_count_q2 = alt.Chart(q2_class_df, width=400, title='Number of comments for themes in training data').mark_bar().encode(
-    x=alt.X('themes:N', sort='-y', title = 'themes'),
-    y=alt.Y('count:Q')
+theme_count_q2 = alt.Chart(q2_class_df, width=600, height=300, title='Number of comments for themes in training data').mark_bar().encode(
+    y=alt.Y('themes:N', sort='-x', title = 'themes'),
+    x=alt.X('count:Q'),
+    opacity=alt.Opacity('count:Q', legend=None),
+    tooltip='count:Q'
 ).configure_axisX(
-    labelAngle = -45
+    #labelAngle = -45
 ).to_json()
 ```
-
 
 ```{r}
 as_vegaspec(py$theme_count_q2)
 ```
-
-<div>
-
-<br>
-<br>
-Labels for 2018: <span style="color:#005c99">6 themes</span> and <span style="color:#005c99">16 sub-themes</span>
-
-<br>
+</center>
 Label cardinality: **~1.6**
-</div>
+
 
 ## Challenges
-- <span style="color:#005c99">Achieve desired accuracy</span> with Multi-label classification model having high number of labels.
+- <span style="color:#005c99">Decide appropriate metric for evaluating accuracy</span> (considering partial correctness) for multi-label prediction problem.
+
+<br>
+
+- Low label cardinality indicating <span style="color:#005c99">sparsity</span> in training data
+  - ~2 labels per comment from ~60 labels.
+ 
+<br>
+
+- Build a model with increased performance -<span style="color:#005c99">higher label precision and recall</span>- than the MDS team last year so that it <span style="color:#005c99">can be deployed by BC Stats</span>.
 
 <br>
 
 - <span style="color:#005c99">Class Imbalance</span> in the data
   - skeweness in number of comments per label.
 
-<br>
-
-- Low label cardinality indicating <span style="color:#005c99">sparsity</span> in training data
-  - ~2 labels per comment from ~60 labels.
-
 ## Techniques | Question 1
 <span style="color:#005c99">Binary Relevance</span> - Base Model from last year's Captsone
-
-<img src="./figures/x.png" width='90%'/>
-<img src="./figures/br_train.png" width='100%'/>
+<center>
+  <img src="./figures/x.png" width='18%'/>
+  
+  <img src="./figures/br_train.png" width='32%'/>
+</center>
 <br>
-*Source* - [Multi-Label Classification: Binary Relevance, by Analytics Vidhya](https://www.analyticsvidhya.com/blog/2017/08/introduction-to-multi-label-classification/)
+<font size="3">*Source: [Multi-Label Classification: Binary Relevance, by Analytics Vidhya](https://www.analyticsvidhya.com/blog/2017/08/introduction-to-multi-label-classification/)*</font>
 
 
 ## Techniques | Question 1
 <span style="color:#005c99">Classifier Chains</span> - Proposed Base Model
-<img src="./figures/cc_x.png" width='100%'/>
-<img src="./figures/cc_train.png" width='100%'/>
+<center>
+  <img src="./figures/cc_x.png" width='25%'/>
+  
+  <img src="./figures/cc_train.png" width='80%'/>
+</center>
 <br>
 
 - Multi-Label Classification using TF-IDF Vectorizer with Classifier Chain.
 
 <br>
-*Source* - [Multi-Label Classification: Classifier Chains, by Analytics Vidhya](https://www.analyticsvidhya.com/blog/2017/08/introduction-to-multi-label-classification/)
+<font size="3">*Source: [Multi-Label Classification: Classifier Chains, by Analytics Vidhya](https://www.analyticsvidhya.com/blog/2017/08/introduction-to-multi-label-classification/)*</font>
 
 
 ## Techniques | Question 2
@@ -266,7 +311,13 @@ Label cardinality: **~1.6**
 
 <br>
 
-- **<span style="color:#005c99">Dash app</span> that displays the trends across ministries for both the qualitative questions**
+- **<span style="color:#005c99">Dash app</span> that displays the trends across ministries for both qualitative questions**
+
+<center>
+  <img src="./figures/Dash_app_sketch.png" width='62%'/>
+</center>
+<font size="3">*Source: Dash app's sketch, based in [app developed by BC Stats for the Workforce Profiles Report 2018](https://www.analyticsvidhya.com/blog/2017/08/introduction-to-multi-label-classification/).*</font><br>
+<font size="3">Note: This figure is just for illustrative purpose, the final version of the app could differ from the sketch.</font>
 
 
 ## Timeline
