Updating preprocessing function

--- a/notebooks/data_preprocessing_script.ipynb
+++ b/notebooks/data_preprocessing_script.ipynb
@@ -26,18 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
-    "import nltk\n",
-    "from nltk.tokenize import sent_tokenize, word_tokenize\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk import wordpunct_tokenize, WordNetLemmatizer, sent_tokenize, pos_tag\n",
-    "from nltk.corpus import stopwords as sw, wordnet as wn\n",
     "\n",
     "import string\n",
     "import re\n",
@@ -46,144 +40,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import spacy\n",
-    "from collections import Counter\n",
+    "# from collections import Counter\n",
     "import en_core_web_sm\n",
-    "nlp = en_core_web_sm.load()\n"
+    "nlp = en_core_web_sm.load()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class comment_preprocessor:\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "        self.stop_words = list(set(stopwords.words('english')))\n",
-    "        punctuation = string.punctuation\n",
-    "        self.stop_words += list(punctuation)\n",
-    "        self.stop_words.extend(['``','’', '`','br','\"',\"”\", \"''\", \"'s\"])\n",
-    "    \n",
-    "    def lemmatize(self, token, tag):\n",
-    "        \"\"\"\n",
-    "        Converts NLTK tag to a WordNet POS tag, then uses that   \n",
-    "        tag to perform an accurate WordNet lemmatization.\n",
-    "        \"\"\"\n",
-    "        tag = tag.lower()\n",
+    "# function adapted from `preprocess` function of lab 3 \n",
+    "# of this course (575 Advance Learning Machine)\n",
     "\n",
-    "        if str.startswith(tag, 'v'):\n",
-    "            tag = wn.VERB\n",
-    "        elif str.startswith(tag, 'j'):\n",
-    "            tag = wn.ADJ\n",
-    "        elif str.startswith(tag, 'r'):\n",
-    "            tag = wn.ADV\n",
-    "        else:\n",
-    "            tag = wn.NOUN\n",
+    "def preprocess_comments(text, \n",
+    "               min_token_len = 2, \n",
+    "               irrelevant_pos = [#'PROPN', # erase proper names as 'George', but also words as orange or apple\n",
+    "                                 'PRON',\n",
+    "                                 'SPACE',\n",
+    "                                 'PUNCT', # as:  . , ; ... \" ? ! $\n",
+    "#                                  'DET', # commented since it removes 'no' which changes meaning of a sentence\n",
+    "                                 'ADV',   # removes words including 'why'\n",
+    "                                 'ADP',\n",
+    "                                 'CCONJ'\n",
+    "               ], avoid_entities = ['PERSON', 'ORG', 'LOC', 'GPE']): \n",
+    "    \"\"\"\n",
+    "    Given text, min_token_len, irrelevant_pos and avoid_entities, carries out \n",
+    "    preprocessing of the text and returns list of preprocessed text. \n",
+    "    \n",
+    "    Parameters\n",
+    "    -------------\n",
+    "    text : (list) \n",
+    "        the list of text to be preprocessed\n",
+    "    min_token_len : (int) \n",
+    "        min_token_length required\n",
+    "    irrelevant_pos : (list) \n",
+    "        a list of irrelevant pos tags\n",
+    "    avoid_entities : (list)\n",
+    "        a list of entity labels to be avoided\n",
+    "    \n",
+    "    Returns\n",
+    "    -------------\n",
+    "    (list) list of preprocessed text\n",
+    "    \n",
+    "    Example\n",
+    "    -------------\n",
+    "    >>> example = [\"Hello, I'm George and I love swimming!\",\n",
+    "                   \"I am a really good cook; what about you?\",\n",
+    "                   \"Contact me at george23@gmail.com\"]\n",
+    "\n",
+    "    >>> preprocess(example)\n",
+    "    (output:) ['hello be love swimming', 'be good cook', 'contact']\n",
+    "    \"\"\"\n",
+    "\n",
+    "    result = []\n",
+    "    \n",
+    "    others = [\"'s\"]\n",
+    "    \n",
+    "    for sent in text:\n",
     "        \n",
-    "        return WordNetLemmatizer().lemmatize(token, tag)\n",
+    "        sent = sent.lower()\n",
+    "        sent = re.sub(r\"facebook\", \"social media\", sent)\n",
+    "        sent = re.sub(r\"twitter\", \"social media\", sent)\n",
+    "        sent = re.sub(r\"instagram\", \"social media\", sent)\n",
+    "        sent = re.sub(r\"whatsapp\", \"social media\", sent)\n",
+    "        sent = re.sub(r\"linkedin\", \"social media\", sent)\n",
+    "        sent = re.sub(r\"snapchat\", \"social media\", sent)\n",
+    "        \n",
+    "        result_sent = []\n",
+    "        \n",
+    "        doc = nlp(sent)\n",
+    "        entities = [str(ent) for ent in doc.ents if ent.label_ in avoid_entities] # This helps to detect names of persons, of organization and dates\n",
+    "        \n",
+    "        for token in doc:\n",
+    "#             print(token.pos_)\n",
+    "            \n",
+    "            if (token.like_email or\n",
+    "                token.like_url or\n",
+    "                token.pos_ in irrelevant_pos or\n",
+    "                str(token) in entities or       # removes names entities\n",
+    "                str(token.lemma_) in others or\n",
+    "                len(token) < min_token_len):\n",
+    "                continue\n",
+    "            else:\n",
+    "                result_sent.append(token.lemma_) # carries out lemmatization\n",
     "    \n",
-    "    def preprocess_text(self, document_list):\n",
-    "        \"\"\"\n",
-    "        Preprocesses list of documents by reomving stop words, tokenizing, \n",
-    "        lemmatizing, and converting short word forms into complete words.\n",
-    "        \"\"\"\n",
-    "        cleaned_document = []\n",
-    "        vocab = []\n",
-    "\n",
-    "        # For each document inside the corpus\n",
-    "        for sent in document_list:\n",
-    "\n",
-    "            sent = sent.lower()\n",
-    "            sent = re.sub(r\"what's\", \"what is \", sent)\n",
-    "            sent = re.sub(r\"\\'ve\", \" have \", sent)\n",
-    "            sent = re.sub(r\"can't\", \"cannot \", sent)\n",
-    "            sent = re.sub(r\"n't\", \"not \", sent)\n",
-    "            sent = re.sub(r\"i'm\", \"i am \", sent)\n",
-    "            sent = re.sub(r\"\\'re\", \" are \", sent)\n",
-    "            sent = re.sub(r\"\\'d\", \" would \", sent)\n",
-    "            sent = re.sub(r\"\\'ll\", \" will \", sent)\n",
-    "            sent = sent.replace(\"\\n\", \" \")\n",
-    "            sent = sent.replace(r'<br />',' ')\n",
-    "\n",
-    "            lemmatized_tokens = []\n",
-    "\n",
-    "            # Break the sentence into part of speech tagged tokens\n",
-    "            for token, tag in pos_tag(wordpunct_tokenize(sent)):\n",
-    "\n",
-    "                # Apply preprocessing to the tokens\n",
-    "                token = token.strip()\n",
-    "\n",
-    "                if token in self.stop_words:\n",
-    "                    continue\n",
-    "\n",
-    "                # Lemmatize the token\n",
-    "                lemma = self.lemmatize(token, tag)\n",
-    "                lemmatized_tokens.append(lemma)\n",
-    "                vocab.append(lemma)\n",
-    "\n",
-    "            cleaned_document.append(lemmatized_tokens)\n",
-    "\n",
-    "        vocab = sorted(list(set(vocab)))\n",
-    "\n",
-    "        return cleaned_document, vocab"
+    "        result.append(\" \".join(result_sent))\n",
+    "        \n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus = [\"It isn't a great day. I loved the movie and spending time with you.\", \n",
-    "              \"The sky is not always blue underneath. Remember that.\"]"
+    "corpus = [\"Why I got this information from Facebook today\", \"News from Whatsapp isn't reliable\",\n",
+    "          \"Do you eat apples?\", \"Apple is a profitable company\", \n",
+    "          \"Twitter is a great source of information!!!\",\n",
+    "          \"Victor's computer's are great!!\", \"Isn't it a great day, Bob? I loved the movie and spending time with you.\", \n",
+    "          \"The sky is not always blue underneath. Remember that.\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c_pp = comment_preprocessor()\n",
-    "clean_doc_2, vocab_2 = c_pp.preprocess_text(corpus)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['isnot', 'great', 'day', 'love', 'movie', 'spending', 'time'],\n",
-       " ['sky', 'always', 'blue', 'underneath', 'remember']]"
+       "['get this information social medium today',\n",
+       " 'news social medium be not reliable',\n",
+       " 'do eat apple',\n",
+       " 'be profitable company',\n",
+       " 'social media be great source information',\n",
+       " 'computer be great',\n",
+       " 'be not great day love the movie spending time',\n",
+       " 'the be not blue remember that']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clean_doc_2"
+    "preprocess_comments(corpus)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Usage example with training data\n",
-    "\n",
-    "# clean_doc, vocab = c_pp.preprocess_text(list(X_train_q1['Comment']))"
+    "example = [\"Hello, I'm George and I love swimming!\",\n",
+    "                   \"I am a really good cook; what about you?\",\n",
+    "                   \"Contact me at george23@gmail.com\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hello be love swimming', 'be good cook', 'contact']"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocess_comments(example)"
    ]
   },
   {
@@ -191,13 +212,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## For TFIDF, convert list of lists into list of sentences using the following code\n",
-    "\n",
-    "# final_comments = []\n",
-    "# for docs in clean_doc_2:\n",
-    "#         final_comments.append(' '.join(docs))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
