Use default option

--- a/notebooks/Baseline_dummy.ipynb
+++ b/notebooks/Baseline_dummy.ipynb
@@ -90,23 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Score for Dummy Classifier: 0.00019275250578257516\n",
+      "Training Score for Dummy Classifier: 9.637625289128758e-05\n",
       "Validation Score for Dummy Classifier: 0.00038550501156515033\n",
-      "Validation Recall for Dummy Classifier: 0.08233117483811286\n",
-      "Validation Precision for Dummy Classifier: 0.08135283363802559\n"
+      "Validation Recall for Dummy Classifier: 0.08258928571428571\n",
+      "Validation Precision for Dummy Classifier: 0.0821363280229825\n"
      ]
     }
    ],
    "source": [
     "# Dummy model\n",
-    "dummy_clf = DummyClassifier(strategy=\"stratified\")\n",
+    "dummy_clf = DummyClassifier()\n",
     "dummy_clf.fit(X_train, Y_train)\n",
     "dummy_clf.predict(X_train)\n",
     "\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -140,16 +140,16 @@
     {
      "data": {
       "text/plain": [
-       "array([326., 326., 227., 342., 218., 259., 199., 251., 377., 618., 352.,\n",
-       "       120.,  24.,  16., 190.,  76.,  16.,  35.,  52.,  45., 179.,  57.,\n",
-       "        27.,  15.,  34.,  66., 100.,  41.,  14., 176.,  37., 106.,  25.,\n",
-       "        82.,  74.,  36.,   8.,  95., 108.,  21.,  37.,  54.,  82.,  20.,\n",
-       "        76.,  18.,  36.,  43., 115.,  39.,  26., 140.,  79., 139.,  68.,\n",
-       "        35.,  36., 263.,  57., 104.,  58.,  82.,  61., 104.,  78.,  46.,\n",
-       "        55.,  72.,   1.,  33.,  89.,  42.,   8.,   0.,   1.])"
+       "array([323., 323., 224., 361., 221., 263., 208., 249., 410., 569., 360.,\n",
+       "       109.,  21.,  14., 207.,  70.,  19.,  36.,  61.,  49., 170.,  43.,\n",
+       "        30.,  20.,  38.,  64.,  94.,  31.,  16., 190.,  48.,  95.,  32.,\n",
+       "        68.,  83.,  58.,   8.,  98., 128.,  35.,  34.,  38.,  75.,  12.,\n",
+       "        63.,  15.,  28.,  49., 120.,  61.,  20., 145.,  72., 123.,  63.,\n",
+       "        31.,  47., 298.,  70., 119.,  61.,  62.,  62.,  99.,  65.,  41.,\n",
+       "        55.,  84.,   4.,  27.,  64.,  49.,  14.,   0.,   0.])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "(10376, 13)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,23 +193,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Score for Dummy Classifier: 0.030454895913646876\n",
+      "Training Score for Dummy Classifier: 0.028527370855821126\n",
       "Validation Score for Dummy Classifier: 0.026599845797995375\n",
-      "Validation Recall for Dummy Classifier: 0.13574165298303228\n",
-      "Validation Precision for Dummy Classifier: 0.1370923161967938\n"
+      "Validation Recall for Dummy Classifier: 0.12954672635702294\n",
+      "Validation Precision for Dummy Classifier: 0.12797125483692648\n"
      ]
     }
    ],
    "source": [
     "# Dummy model\n",
-    "dummy_clf_themes = DummyClassifier(strategy=\"stratified\")\n",
+    "dummy_clf_themes = DummyClassifier()\n",
     "dummy_clf_themes.fit(X_train, Y_train_themes)\n",
     "dummy_clf_themes.predict(X_train)\n",
     "\n",
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "(10376, 63)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,23 +258,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Score for Dummy Classifier: 0.00481881264456438\n",
-      "Validation Score for Dummy Classifier: 0.0050115651503469544\n",
-      "Validation Recall for Dummy Classifier: 0.04234122042341221\n",
-      "Validation Precision for Dummy Classifier: 0.04207920792079208\n"
+      "Training Score for Dummy Classifier: 0.0047224363916730915\n",
+      "Validation Score for Dummy Classifier: 0.007324595219737857\n",
+      "Validation Recall for Dummy Classifier: 0.037163814180929094\n",
+      "Validation Precision for Dummy Classifier: 0.03762376237623762\n"
      ]
     }
    ],
    "source": [
     "# Dummy model\n",
-    "dummy_clf_sub = DummyClassifier(strategy=\"stratified\")\n",
+    "dummy_clf_sub = DummyClassifier()\n",
     "dummy_clf_sub.fit(X_train, Y_train_sub)\n",
     "dummy_clf_sub.predict(X_train)\n",
     "\n",
@@ -290,6 +290,13 @@
     "print(\"Validation Precision for Dummy Classifier:\",\n",
     "     precision_score(y_pred_sub, Y_valid_sub, average= 'micro'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
