adding cleaned up baseline see summart of results

--- a/notebooks/baseline_model.ipynb
+++ b/notebooks/baseline_model.ipynb
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -1369,18 +1369,27 @@
        "      <td>0.424010</td>\n",
        "      <td>0.655067</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>LinearSVC(C=0.5, tol=0.2) 2019 capstone base</td>\n",
+       "      <td>0.562355</td>\n",
+       "      <td>0.315343</td>\n",
+       "      <td>0.372772</td>\n",
+       "      <td>0.758308</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      Model  Train Accuracy  \\\n",
-       "0                                 LinearSVC        0.798670   \n",
-       "1                             MultinomialNB        0.051850   \n",
-       "2                                GaussianNB        0.448921   \n",
-       "3                              RandomForest        0.996627   \n",
-       "4                              DecisionTree        0.997976   \n",
-       "5  LinearSVC(multi_class= \"crammer_singer\")        0.707209   \n",
+       "                                          Model  Train Accuracy  \\\n",
+       "0                                     LinearSVC        0.798670   \n",
+       "1                                 MultinomialNB        0.051850   \n",
+       "2                                    GaussianNB        0.448921   \n",
+       "3                                  RandomForest        0.996627   \n",
+       "4                                  DecisionTree        0.997976   \n",
+       "5      LinearSVC(multi_class= \"crammer_singer\")        0.707209   \n",
+       "6  LinearSVC(C=0.5, tol=0.2) 2019 capstone base        0.562355   \n",
        "\n",
        "   Validation Accuracy  Recall Score  Precision Score  \n",
        "0             0.328065      0.403465         0.709312  \n",
@@ -1388,10 +1397,11 @@
        "2             0.024672      0.291584         0.074228  \n",
        "3             0.190825      0.194802         0.861993  \n",
        "4             0.226291      0.437376         0.472334  \n",
-       "5             0.343099      0.424010         0.655067  "
+       "5             0.343099      0.424010         0.655067  \n",
+       "6             0.315343      0.372772         0.758308  "
       ]
      },
-     "execution_count": 176,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
