Add code to save the datasets in CSV files

--- a/notebooks/Merge_split_data.ipynb
+++ b/notebooks/Merge_split_data.ipynb
@@ -15,7 +15,6 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "# import altair as alt\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -49,7 +48,7 @@
    "outputs": [],
    "source": [
     "# WES 2013, question 1\n",
-    "data_2013 = pd.read_excel(\"data/2013/WES2013 1st Qual Sample - Coded.xlsx\", \n",
+    "data_2013 = pd.read_excel(\"../data/2013/WES2013 1st Qual Sample - Coded.xlsx\", \n",
     "                     sheet_name='2013 1st Qual Sample',\n",
     "                     skiprows=1)   ## change your path for data\n",
     "data_2013.rename(columns={'_telkey':'Telkey',\n",
@@ -64,7 +63,7 @@
    "outputs": [],
    "source": [
     "# WES 2018, question 1\n",
-    "data_2018 = pd.read_excel(\"data/2018/WES2018 1st Qual Coded - Final Comments and Codes.xlsx\", \n",
+    "data_2018 = pd.read_excel(\"../data/2018/WES2018 1st Qual Coded - Final Comments and Codes.xlsx\", \n",
     "                     sheet_name='2018 1st Qual',\n",
     "                     skiprows=1)   ## change your path for data\n",
     "data_2018.rename(columns={'_telkey':'Telkey',\n",
@@ -79,7 +78,7 @@
    "outputs": [],
    "source": [
     "# WES 2020, question 1\n",
-    "data_2020 = pd.read_excel(\"data/2020/WES2020 1st Qual Coded - Final Comments and Codes.xlsx\", \n",
+    "data_2020 = pd.read_excel(\"../data/2020/WES2020 1st Qual Coded - Final Comments and Codes.xlsx\", \n",
     "                     sheet_name='2020 1st Qual',\n",
     "                     skiprows=1)\n",
     "data_2020.rename(columns={'Q3345_13:   What one thing would you like your organization to focus on to improve your work environment?':'Comment'}, inplace=True)\n",
@@ -100,7 +99,7 @@
    "outputs": [],
    "source": [
     "# header\n",
-    "header_codes = pd.read_excel(\"data/2020/WES2020 1st Qual Coded - Final Comments and Codes.xlsx\", \n",
+    "header_codes = pd.read_excel(\"../data/2020/WES2020 1st Qual Coded - Final Comments and Codes.xlsx\", \n",
     "                          sheet_name='Codebook',\n",
     "                          usecols='A,F')\n",
     "\n",
@@ -117,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +388,7 @@
        "[5 rows x 78 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +430,7 @@
        "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,16 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Saving y_train files**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_train.to_csv('data/y_train.csv', index=False)"
+    "**Saving files**"
    ]
   },
   {
@@ -507,7 +497,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# target datasets\n",
+    "y_train.to_csv('../data/y_train.csv', index=False)\n",
+    "y_valid.to_csv('../data/y_valid.csv', index=False)\n",
+    "\n",
+    "# explanatory variable - Comments\n",
+    "################################################################################\n",
+    "### CAUTION! these lines save the COMMENTS, which have sensible information. ###\n",
+    "################################################################################\n",
+    "# X_train.to_csv('../data/X_train.csv', index=False)\n",
+    "# X_valid.to_csv('../data/X_valid.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# y_train_num.to_csv('data/y_train_num.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Karan's addition for R Shiny app\n",
+    "data_all.to_excel('../data/interim/bcstats.xlsx',index = False)"
    ]
   },
   {
@@ -521,28 +539,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Question 2**"
+    "### **Question 2** - Supervised (2018 labeled dataset)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Reading dataset** (2018 labeled dataset)"
+    "**Reading dataset** (2018)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# WES 2018, question 2\n",
-    "data_2018_2 = pd.read_excel('data/2018/WES2018 2nd Qual Coded - Final Comments and Codes.xlsx', \n",
+    "data_2018_2 = pd.read_excel('../data/2018/WES2018 2nd Qual Coded - Final Comments and Codes.xlsx', \n",
     "                     sheet_name='2018 2nd Qual Coded (All)')  ## change path for data\n",
-    "data_2018_2.rename(columns={'Q4981_11':'Comment'}, inplace=True)\n",
-    "# data_2018_2['Year'] = 2018\n",
-    "# data_2018_2.head()"
+    "data_2018_2.rename(columns={'Q4981_11':'Comment'}, inplace=True)"
    ]
   },
   {
@@ -554,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,17 +627,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Saving y_train file**"
+    "**Saving files**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Saving y_train\n",
-    "y_train_2.to_csv('data/y_train_q2.csv', index=False)"
+    "# target datasets\n",
+    "y_train_2.to_csv('../data/y_train_q2.csv', index=False)\n",
+    "# y_valid_2.to_csv('../data/y_valid_q2.csv', index=False)\n",
+    "\n",
+    "# explanatory variable - Comments\n",
+    "################################################################################\n",
+    "### CAUTION! these lines save the COMMENTS, which have sensible information. ###\n",
+    "################################################################################\n",
+    "# X_valid_2.to_csv('../data/X_valid_q2.csv', index=False)\n",
+    "# X_train_2.to_csv('../data/X_train_q2.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 2 - Unsupervised (complete dataset of comments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# WES 2015, question 2 in the necesary format\n",
+    "data_2018_2['Year'] = 2018\n",
+    "data_2018_2b = data_2018_2[['Telkey', 'Comment', 'Year']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# WES 2015, question 2\n",
+    "data_2015_2 = pd.read_excel('../data/2015/WES2015 2nd Qual UNCODED.xlsx', \n",
+    "                     sheet_name='2015 2nd Qual')  ## change path for data\n",
+    "data_2015_2.rename(columns={'Q4981_11':'Comment',\n",
+    "                            'telkey': 'Telkey'}, inplace=True)\n",
+    "data_2015_2['Year'] = 2015"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# WES 2020, question 2\n",
+    "data_2020_2 = pd.read_excel('../data/2020/WES2020 2nd Qual UNCODED.xlsx', \n",
+    "                     sheet_name='WES2020 Q4981_11 UNCODED')  ## change path for data\n",
+    "data_2020_2.rename(columns={'AQ4981_11':'Comment',\n",
+    "                            '_telkey': 'Telkey'}, inplace=True)\n",
+    "data_2020_2['Year'] = 2020"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Put databases together for question 2\n",
+    "frames = [data_2020_2, data_2018_2b, data_2015_2]\n",
+    "unsuperv_q2 = pd.concat(frames)\n",
+    "\n",
+    "# Saving unsuperv_q2 dataset\n",
+    "#################################################################################\n",
+    "### CAUTION! the next line save the COMMENTS, which have sensible information. ###\n",
+    "##################################################################################\n",
+    "# unsuperv_q2.to_csv('../data/unsuperv_q2.csv', index=False)"
    ]
   },
   {
