updated with updated preprocessing

--- a/notebooks/baseline_model.ipynb
+++ b/notebooks/baseline_model.ipynb
@@ -1927,7 +1927,8 @@
    "source": [
     "# Decision Tree Hierachical Multi-Classifier\n",
     "\n",
-    "- trying to get hmm to work but exceptions trouble importing"
+    "- trying to get hmm to work but exceptions trouble importing\n",
+    "https://github.com/davidwarshaw/hmc"
    ]
   },
   {
