--- a/notebooks/Deep Learning-CNN-MSNIT.ipynb
+++ b/notebooks/Deep Learning-CNN-MSNIT.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using plaidml.keras.backend backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.environ[\"KERAS_BACKEND\"] = \"plaidml.keras.backend\"\n",
@@ -25,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,40 +92,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:plaidml:Opening device \"opencl_amd_radeon_pro_555x_compute_engine.0\"\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Train on 60000 samples, validate on 10000 samples\n",
       "Epoch 1/12\n",
-      "60000/60000 [==============================] - 27s 448us/step - loss: 0.2714 - acc: 0.9169 - val_loss: 0.0601 - val_acc: 0.9801\n",
+      "17408/60000 [=======>......................] - ETA: 33s - loss: 0.5459 - acc: 0.8253"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/karan/anaconda3/lib/python3.7/site-packages/numpy/ctypeslib.py:436: RuntimeWarning: Invalid PEP 3118 format string: '&<f'\n",
+      "  return array(obj, copy=False)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60000/60000 [==============================] - 46s 762us/step - loss: 0.2651 - acc: 0.9174 - val_loss: 0.0608 - val_acc: 0.9815\n",
       "Epoch 2/12\n",
-      "60000/60000 [==============================] - 21s 344us/step - loss: 0.0886 - acc: 0.9739 - val_loss: 0.0427 - val_acc: 0.9869\n",
+      "60000/60000 [==============================] - 38s 629us/step - loss: 0.0888 - acc: 0.9740 - val_loss: 0.0402 - val_acc: 0.9862\n",
       "Epoch 3/12\n",
-      "60000/60000 [==============================] - 21s 344us/step - loss: 0.0674 - acc: 0.9800 - val_loss: 0.0346 - val_acc: 0.9883\n",
+      "60000/60000 [==============================] - 38s 628us/step - loss: 0.0687 - acc: 0.9797 - val_loss: 0.0366 - val_acc: 0.9871\n",
       "Epoch 4/12\n",
-      "60000/60000 [==============================] - 21s 344us/step - loss: 0.0562 - acc: 0.9828 - val_loss: 0.0353 - val_acc: 0.9881\n",
+      "60000/60000 [==============================] - 38s 631us/step - loss: 0.0552 - acc: 0.9837 - val_loss: 0.0361 - val_acc: 0.9881\n",
       "Epoch 5/12\n",
-      "60000/60000 [==============================] - 22s 362us/step - loss: 0.0462 - acc: 0.9860 - val_loss: 0.0305 - val_acc: 0.9901\n",
+      "60000/60000 [==============================] - 38s 632us/step - loss: 0.0469 - acc: 0.9861 - val_loss: 0.0355 - val_acc: 0.9886\n",
       "Epoch 6/12\n",
-      "60000/60000 [==============================] - 62s 1ms/step - loss: 0.0406 - acc: 0.9871 - val_loss: 0.0307 - val_acc: 0.9907\n",
+      "60000/60000 [==============================] - 38s 632us/step - loss: 0.0409 - acc: 0.9880 - val_loss: 0.0319 - val_acc: 0.9883\n",
       "Epoch 7/12\n",
-      "60000/60000 [==============================] - 23s 376us/step - loss: 0.0378 - acc: 0.9886 - val_loss: 0.0277 - val_acc: 0.9909\n",
+      "60000/60000 [==============================] - 38s 630us/step - loss: 0.0373 - acc: 0.9887 - val_loss: 0.0273 - val_acc: 0.9919\n",
       "Epoch 8/12\n",
-      "60000/60000 [==============================] - 21s 352us/step - loss: 0.0339 - acc: 0.9896 - val_loss: 0.0270 - val_acc: 0.9916\n",
+      "60000/60000 [==============================] - 38s 632us/step - loss: 0.0343 - acc: 0.9893 - val_loss: 0.0271 - val_acc: 0.9913\n",
       "Epoch 9/12\n",
-      "60000/60000 [==============================] - 21s 345us/step - loss: 0.0324 - acc: 0.9903 - val_loss: 0.0280 - val_acc: 0.9900\n",
+      "60000/60000 [==============================] - 38s 633us/step - loss: 0.0323 - acc: 0.9900 - val_loss: 0.0279 - val_acc: 0.9924\n",
       "Epoch 10/12\n",
-      "60000/60000 [==============================] - 21s 343us/step - loss: 0.0293 - acc: 0.9909 - val_loss: 0.0269 - val_acc: 0.9906\n",
+      "60000/60000 [==============================] - 37s 624us/step - loss: 0.0280 - acc: 0.9912 - val_loss: 0.0309 - val_acc: 0.9915\n",
       "Epoch 11/12\n",
-      "60000/60000 [==============================] - 21s 348us/step - loss: 0.0275 - acc: 0.9917 - val_loss: 0.0267 - val_acc: 0.9921\n",
+      "60000/60000 [==============================] - 38s 632us/step - loss: 0.0285 - acc: 0.9913 - val_loss: 0.0280 - val_acc: 0.9904\n",
       "Epoch 12/12\n",
-      "60000/60000 [==============================] - 21s 350us/step - loss: 0.0259 - acc: 0.9919 - val_loss: 0.0254 - val_acc: 0.9923\n",
-      "Test loss: 0.025376750528812407\n",
-      "Test accuracy: 0.9923\n"
+      "60000/60000 [==============================] - 38s 626us/step - loss: 0.0269 - acc: 0.9914 - val_loss: 0.0279 - val_acc: 0.9910\n",
+      "Test loss: 0.027639875388145448\n",
+      "Test accuracy: 0.991\n"
      ]
     }
    ],
